# code-context-mcp-mlx

./: .gitignore  README.md  pyproject.toml
src/local_code_context/: embeddings.py  rrf.py  search.py  server.py  snapshot.py  splitter.py  store.py
tests/: test_embeddings.py  test_rrf.py  test_snapshot.py  test_splitter.py  test_store.py
